<resources>
    <string name="fehler1it">Computer startet nicht</string>
    <string name="fehler2it">Beamer funktioniert nicht</string>
    <string name="fehler3it">Ton funktioniert nicht</string>
    <string name="fehler4it">Programm fehlt</string>
    <string name="fehler5it">Friert ein</string>
    <string name="fehler6it">Stürzt ab</string>
    <string name="fehlergebaeude">Haustechnik</string>
    <string name="fehlersonstige">Sonstige</string>
    <string name="app_name">AMGApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_itteam_senden">Raum</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_itteam_senden4">Fehler</string>
    <string name="title_activity_itteam_senden4_vorhanden">Meldung vorhanden</string>
    <string name="title_activity_itteam4_sonstige">Sonstige Fehler</string>
    <string name="title_activity_itteam_senden5">Wichtigkeit</string>
    <string name="title_activity_itteam_senden6">Beschreibung</string>
    <string name="title_activity_itteam_senden_pruefeung">Zusammenfassung</string>
    <string name="title_activity_itteam_holen">Fehlermeldungen</string>
    <string name="title_activity_stundenplan">Stundenplan</string>
    <string name="title_activity_vertretungsplan">Vertretungsplan</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_einstellungen">Einstellungen</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_hilfe">Hilfe</string>
    <string name="title_activity_feedback_holen">Feedback abrufen</string>
    <string name="title_activity_schwarzes_brett">Schwarzes Brett</string>
    <string name="title_activity_botnav_sonstiges">Sonstiges</string>
    <string name="hue_view_content_desc">Hue image</string>
    <string name="hue_cursor_content_desc">Hue image cursor</string>
    <string name="color_picker_content_desc">Color picker image</string>
    <string name="arrow_content_desc">Arrow image</string>
    <string name="nav_header_app">AMG-App</string>
    <string name="nav_header_desc">AMG – Für unterwegs</string>
    <string name="nav_drawer_startseite">Startseite</string>
    <string name="nav_drawer_vplan">Vertretungsplan</string>
    <string name="nav_drawer_stundenplan">Stundenplan</string>
    <string name="nav_drawer_schwarzes_brett">Schwarzes Brett</string>
    <string name="nav_drawer_it_team_senden">Fehler melden</string>
    <string name="nav_drawer_it_team_holen">Meldungen abrufen</string>
    <string name="nav_drawer_feedback_holen">Feedback abrufen</string>
    <string name="nav_drawer_login">Login</string>
    <string name="nav_drawer_einstellungen">Einstellungen</string>
    <string name="nav_drawer_feedback">Hilfe und Feedback</string>
    <string name="nav_drawer_info">Info</string>
    <string name="startseite_text">Das 4-zügige AMG ist das jüngste Gymnasium Wittens. 74 Lehrer/innen unterrichten ca. 1050 Schüler/innen (SuS). Im Leistungskursbereich kooperieren wir mit den beiden anderen Wittener Gymnasien. In der Stufe EF werden SuS der benachbarten Realschulen aufgenommen.
        \n\nDie individuelle Förderung von SuS besitzt einen hohen Stellenwert. So sind in der Erprobungsstufe Bläserklassen eingerichtet, und für die Stufen 5 bis 7 wird je eine naturwissenschaftliche Profilklasse angeboten.
        \n\nFür den Einsatz moderner Medien ist die Schule komplett vernetzt. Wichtige Bausteine unseres Schulprogramms sind: die Vermittlung von Arbeits- und Lernformen, ein Selbstlernzentrum für die Sek. II,  eine Kultur des Hinschauens (d.h. Präventivmaßnahmen im Bereich Mobbing, Gewalt, Sucht), die Ausbildung von Streitschlichtern, Theater- und Roboter-AGs, Sportwettkämpfe in den Stufen 5/6, eine umfassende Studien- und Berufswahlorientierung sowie die Teilnahme an den Sprachprüfungen DELF, DELE und ESOL und der Schüleruniversität.
        \n\nWir unterrichten weitgehend in Doppelstunden. Lehrerarbeits- und Kommunikationsräume ergänzen das Angebot, um den Arbeitsplatz Schule für alle Beteiligten als Lebensraum Schule zu definieren.</string>
    <string name="startseite_logo_description">AMG-Logo</string>
    <string name="startseite_changelog_positive">OK</string>
    <string name="startseite_changelog_title">Changelog</string>
    <string name="stundenplan_bearbeiten">Bearbeiten</string>
    <string name="stundenplan_new">+</string>
    <string name="stundenplan_nothing">Du musst zuerst einen Stundenplan für %1$s eingeben!</string>
    <string name="stundenplan_mo_lang">Montag</string>
    <string name="stundenplan_di_lang">Dienstag</string>
    <string name="stundenplan_mi_lang">Mittwoch</string>
    <string name="stundenplan_do_lang">Donnerstag</string>
    <string name="stundenplan_fr_lang">Freitag</string>
    <string name="stundenplan_mo_kurz">Mo.</string>
    <string name="stundenplan_di_kurz">Di.</string>
    <string name="stundenplan_mi_kurz">Mi.</string>
    <string name="stundenplan_do_kurz">Do.</string>
    <string name="stundenplan_fr_kurz">Fr.</string>
    <string name="stundenplan_time_notDefined">Nicht definiert</string>
    <string name="stundenplan_ask_deleteAll">Bist du sicher, dass du deinen ganzen Stundenplan löschen willst?</string>
    <string name="stundenplan_ask_deleteAll_positive">Ja</string>
    <string name="stundenplan_ask_deleteAll_negative">Abbrechen</string>
    <string name="stundenplan_ask_deleteAll_title">Stundenplan löschen</string>
    <string name="stundenplan_edit_fachname">Fachname</string>
    <string name="stundenplan_edit_fachAbk">Fach Abkürzung (Mit Kursnummer)</string>
    <string name="stundenplan_edit_lehrer">Lehrer</string>
    <string name="stundenplan_edit_raum">Raum</string>
    <string name="stundenplan_edit_ready">Speichern</string>
    <string name="stundenplan_edit_delete">Löschen</string>
    <string name="it_team_melden_raum_ready">Weiter</string>
    <string-array name="it_team_melden_gebaeude_array">
        <item>H</item>
        <item>A</item>
        <item>N</item>
    </string-array>
    <string-array name="it_team_melden_etage_array">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>Z</item>
        <item>U</item>
    </string-array>
    <string-array name="it_team_melden_raum_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string name="it_team_melden_gebaeude_none">Ohne Raum</string>
    <string name="it_team_melden_raum">Bitte wähle den Raum mit dem zu meldendem Fehler aus!</string>
    <string name="it_team_melden_fehler">Bitte wähle den Fehler für den Raum %1$s aus!</string>
    <string name="it_team_melden_fehler_ohneRaum">Bitte wähle den generellen Fehler aus!</string>
    <string name="it_team_melden_beschr">Beschreibung des Fehlers</string>
    <string name="it_team_melden_beschr_ready">Fertig</string>
    <string name="it_team_melden_vorhanden">Dieser Fehler wurde bereits eingetragen.</string>
    <string name="it_team_melden_vorhanden_mehrBeschr">Beschreibung hinzufügen</string>
    <string name="it_team_melden_vorhanden_cancel">Abbrechen</string>
    <string name="it_team_melden_wichtigk">Bitte wähle die Wichtigkeit des Fehlers aus!</string>
    <string name="it_team_melden_wichtigk_unwichtig">Unwichtig</string>
    <string name="it_team_melden_wichtigk_normal">Normal</string>
    <string name="it_team_melden_wichtigk_wichtig">Wichtig</string>
    <string name="it_team_melden_mehr_beschr">Beschreibung</string>
    <string name="it_team_melden_mehr_beschr_ready">Fertig</string>
    <string name="it_team_melden_pruefung">Sind alle Daten richtig?</string>
    <string name="it_team_melden_pruefung_daten">Raum: %1$s\n\n\nFehler: %2$s\n\n\nWichtigkeit: %3$s\n\n\nBeschreibung: %4$s</string>
    <string name="it_team_melden_pruefung_send">Senden</string>
    <string name="it_team_melden_pruefung_cancel">Abbrechen</string>
    <string name="it_team_melden_erfolgreich">Gemeldet!</string>
    <string name="it_team_melden_nicht_erfolgreich">Fehler beim Melden des Fehlers</string>
    <string name="it_team_holen_filter_status">Status</string>
    <string name="it_team_holen_filter_status_offen">Offen</string>
    <string name="it_team_holen_filter_status_bearbeitend">In Bearbeitung</string>
    <string name="it_team_holen_filter_status_fertig">Fertig</string>
    <string name="it_team_holen_filter_gebaeude">Gebäude</string>
    <string name="it_team_holen_filter_gebaeude_hauptbau">Hauptbau</string>
    <string name="it_team_holen_filter_gebaeude_altbau">Altbau</string>
    <string name="it_team_holen_filter_gebaeude_neubau">Neubau</string>
    <string name="it_team_holen_filter_etage">Etage</string>
    <string name="it_team_holen_filter_etage_2">2</string>
    <string name="it_team_holen_filter_etage_1">1</string>
    <string name="it_team_holen_filter_etage_0">0</string>
    <string name="it_team_holen_filter_etage_Z">Z</string>
    <string name="it_team_holen_filter_etage_U">U</string>
    <string name="it_team_holen_filter_raum">Raum</string>
    <string name="it_team_holen_filter_raum_01">01</string>
    <string name="it_team_holen_filter_raum_02">02</string>
    <string name="it_team_holen_filter_raum_03">03</string>
    <string name="it_team_holen_filter_raum_04">04</string>
    <string name="it_team_holen_filter_raum_05">05</string>
    <string name="it_team_holen_filter_raum_06">06</string>
    <string name="it_team_holen_filter_raum_07">07</string>
    <string name="it_team_holen_filter_raum_08">08</string>
    <string name="it_team_holen_filter_raum_09">09</string>
    <string name="it_team_holen_filter_raum_10">10</string>
    <string name="it_team_holen_filter_raum_11">11</string>
    <string name="it_team_holen_filter_raum_12">12</string>
    <string name="it_team_holen_filter_raum_13">13</string>
    <string name="it_team_holen_filter_raum_14">14</string>
    <string name="it_team_holen_change_status">Status</string>
    <string name="it_team_holen_nothing">Keine Einträge vorhanden</string>
    <string name="notify_vertretungsplan_nichts">Heute nichts!</string>
    <string name="notify_vertretungsplan_etwas">Heute ändert sich etwas.</string>
    <string name="help_vertretungsplan_icons">Es werden keine Icons mehr im Vertretungsplan angezeigt</string>
    <string name="help_vertretungsplan_icons_solution">In den Einstellungen die &quot;Icons im Vertretungsplan&quot; einschalten.</string>
    <string name="help_vertretungsplan_icons_error">Die Icons im Vertretungsplan wurden durch Text/Platzhalter ersetzt</string>
    <string name="help_vertretungsplan_icons_error_solution">Den folgenden Knopf drücken, um die Icons neu zu generieren:</string>
    <string name="help_vertretungsplan_icons_error_fix">Fix</string>
    <string name="help_stundenplan_vertretungsplan">Im Stundenplan werden die Stunden aus dem Vertretungsplan nicht angezeigt</string>
    <string name="help_stundenplan_vertretungsplan_solution">Kurzform des Fachs in folgendem Format eintragen:\n
 - Unterstufe/Mittelstufe: Normales Kürzel des Fachs wie &quot;M&quot; oder &quot;E5&quot;\n
 - Oberstufe: Kürzel des Fachs mit Kursnummer wie im Vertretungsplan, Beispiele: &quot;M G4&quot; oder &quot;E5 G2&quot;</string>
    <string name="help_feedback">Problem wurde nicht behoben/ist hier nicht gelistet</string>
    <string name="help_feedback_solution">Über folgenden Knopf das Feedback-Formular öffnen und Fehler melden:</string>
    <string name="help_feedback_feedback">Feedback</string>
</resources>