<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_itteam_senden5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="www.amg_witten.de.apptest.ITTeamSenden5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Hilfe"
        android:text="@string/it_team_melden_wichtigk"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/W1"
        android:layout_below="@id/Hilfe"
        android:text="@string/it_team_melden_wichtigk_unwichtig"
        android:onClick="Wichtigkeit"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/W2"
        android:layout_below="@id/W1"
        android:text="@string/it_team_melden_wichtigk_normal"
        android:onClick="Wichtigkeit"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/W3"
        android:layout_below="@id/W2"
        android:text="@string/it_team_melden_wichtigk_wichtig"
        android:onClick="Wichtigkeit"/>

</RelativeLayout>
