<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_itteam_senden4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="www.amg_witten.de.apptest.ITTeamSenden4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/raumPruefen"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fehler1it"
        android:id="@+id/fehler1"
        android:layout_below="@id/raumPruefen"
        android:layout_alignRight="@+id/raumPruefen"
        android:layout_alignEnd="@+id/raumPruefen"
        android:onClick="Fehler"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fehler2it"
        android:id="@+id/fehler2"
        android:layout_below="@id/fehler1"
        android:layout_alignRight="@+id/raumPruefen"
        android:layout_alignEnd="@+id/raumPruefen"
        android:onClick="Fehler"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fehler3it"
        android:id="@+id/fehler3"
        android:layout_below="@id/fehler2"
        android:layout_alignRight="@+id/raumPruefen"
        android:layout_alignEnd="@+id/raumPruefen"
        android:onClick="Fehler"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fehler4it"
        android:id="@+id/fehler4"
        android:layout_below="@id/fehler3"
        android:layout_alignRight="@+id/raumPruefen"
        android:layout_alignEnd="@+id/raumPruefen"
        android:onClick="Fehler"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fehler5it"
        android:id="@+id/fehler5"
        android:layout_below="@id/fehler4"
        android:layout_alignRight="@+id/raumPruefen"
        android:layout_alignEnd="@+id/raumPruefen"
        android:onClick="Fehler"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fehler6it"
        android:id="@+id/fehler6"
        android:layout_below="@id/fehler5"
        android:layout_alignRight="@+id/raumPruefen"
        android:layout_alignEnd="@+id/raumPruefen"
        android:onClick="Fehler"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fehlersonstige"
        android:id="@+id/fehlersonstige"
        android:layout_below="@id/fehler6"
        android:layout_alignRight="@+id/raumPruefen"
        android:layout_alignEnd="@+id/raumPruefen"
        android:onClick="Fehler"/>


    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/fehlersonstige"
        android:id="@+id/fehlerdivider"
        android:background="?android:attr/listDivider"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fehlergebaeude"
        android:text="@string/fehlergebaeude"
        android:layout_below="@id/fehlerdivider"
        android:layout_alignRight="@+id/raumPruefen"
        android:layout_alignEnd="@+id/raumPruefen"
        android:onClick="Fehler"/>-->

</RelativeLayout>
