<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/help_vertretungsplan_icons_layout">


        <TextView
            android:id="@+id/help_vertretungsplan_icons_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/help_vertretungsplan_icons"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_below="@+id/help_vertretungsplan_icons_title"
            android:id="@+id/help_vertretungsplan_icons_solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/help_vertretungsplan_icons_solution"
            android:textSize="15sp"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@id/help_vertretungsplan_icons_layout"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/help_vertretungsplan_icons_error_layout">


        <TextView
            android:id="@+id/help_vertretungsplan_icons_error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:text="@string/help_vertretungsplan_icons_error"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/help_vertretungsplan_icons_error_solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/help_vertretungsplan_icons_error_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/help_vertretungsplan_icons_error_solution"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_vertretungsplan_icons_error_solution"
            android:layout_centerHorizontal="true"
            android:text="@string/help_vertretungsplan_icons_error_fix"
            android:onClick="regenerateVertretungsplanIcons"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/help_vertretungsplan_icons_error_layout"
        android:id="@+id/help_stundenplan_vertretungsplan_layout">


        <TextView
            android:id="@+id/help_stundenplan_vertretungsplan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/help_stundenplan_vertretungsplan"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_below="@+id/help_stundenplan_vertretungsplan_title"
            android:id="@+id/help_stundenplan_vertretungsplan_solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/help_stundenplan_vertretungsplan_solution"
            android:textSize="15sp"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@id/help_stundenplan_vertretungsplan_layout"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/help_feedback_layout">


        <TextView
            android:id="@+id/help_feedback_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:text="@string/help_feedback"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/help_feedback_solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/help_feedback_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/help_feedback_solution"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_feedback_solution"
            android:layout_centerHorizontal="true"
            android:text="@string/help_feedback_feedback"
            android:onClick="startFeedback"/>

    </RelativeLayout>

</RelativeLayout>

</ScrollView>